// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

syntax = "proto3";

import "repr/src/relation_and_scalar.proto";

package mz_storage_client.controller;

message ProtoCollectionMetadata {
    string blob_uri = 1;
    string consensus_uri = 2;
    string data_shard = 3;
    optional string remap_shard = 4;
    optional string status_shard = 5;

    mz_repr.relation_and_scalar.ProtoRelationDesc relation_desc = 6;
}

message ProtoDurableCollectionMetadata {
    // This message is persisted to disk. Changes must be backwards compatible.
    reserved 1, 2, 5;
    string data_shard = 3;
    optional string remap_shard = 4;
}
